# xLaDe

./: .flake8  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  RELEASES.md  lake-manifest.json  pyproject.toml
.github/issue_template/: bug_report.md  documentation.md  experiment.md  feature_request.md  kernel_boundary.md  reproducibility.md  research_discussion.md
.github/pull_request_template/: documentation.md  new_experiment.md  pull_request_template.md
.github/workflows/: cd.yml  formatting.yml  kernel-protection.yml  mirror.yml  pypi.yml  sourceforge.yml  tests.yml  tets.yml
ai/: README.md
assets/architecture/: xlade-architecture-v1.2.0.avif
assets/cli-screenshot/: xlade_v1.6.0.avif
assets/keys/: pgp.asc  pgp.txt  ssh.pub  ssh.txt
assets/torrent/: xlade_v1.6.0.torrent
docs/: AI_use.md  CLI_DEMO.md  END_TO_END_TRACE.md  RESEARCH_SCOPE.md  architecture.md  distribution_manual.md  research_roadmap.md  roadmap.md
experiments/exp-001-proof-review/: experiment.toml  policy.lean
experiments/exp-001-proof-review/Proofs/: Reviewed.lean
experiments/exp-002-kernel-boundary/: experiment.toml
experiments/exp-003-doc-coverage/: README.md  experiment.toml
experiments/exp-004-project-proof-1/: METRICS.md  README.md
experiments/exp-005-lean4-courses/: README.md  experiment.toml
modes/experimental/: enabled-experiments.md
projects/: README.md
projects/demo/: GETTING_STARTED.md
scripts/: README.md  check-kernel.sh
scripts/experiments/: check-doc-coverage.sh  check-kernel.sh  run-exp-005.sh
security/: SECURITY_POLICY.md  TRUST_MODEL.md
tests/: conftest.py  test_check.py  test_doctor.py  test_exp003.py  test_exp004.py  test_exp005.py  test_init.py  test_lean_core.py  test_list_experiments.py  test_metrics.py  test_mode.py  test_run.py  test_run_execution.py  test_status.py
tools/errors/: lean-error-hints.py
xlade/cli/: check.py  clean.py  init.py  list_experiments.py  main.py  metrics.py  run.py  status.py  validate.py
xlade/core/: lean.py
