[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlade"
version = "1.6.0"
description = "eXperimental Lean 4 advanced Development ecosystem"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["lean4", "formal-verification", "proof-assistant", "ecosystem"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

authors = [
    { name = "Lakshit Singh Bisht", email = "lakshitsinghbishttm@gmail.com" }
]

maintainers = [
    { name = "Lakshit Singh Bisht", email = "lakshitsinghbishttm@gmail.com" }
]

[project.scripts]
xlade = "xlade.cli.main:main"

[project.urls]
Homepage = "http://xladeajfgkh32qgq5sj2mtmho3te5pivto7lav44dsbov6uduciz6hqd.onion"
Repository = "https://github.com/LakshitSinghBishtTM/xLaDe"
Documentation = "http://xladeajfgkh32qgq5sj2mtmho3te5pivto7lav44dsbov6uduciz6hqd.onion/docs.html"

[tool.setuptools.packages.find]
where = ["."]
include = ["xlade*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py314"]
extend-exclude = "lean-core"

[tool.isort]
profile = "black"
line_length = 120
skip = ["lean-core"]
